--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
+<!DOCTYPE html>
 <hmtl>
 	<head>
 		<meta charset="UTF-8">
-		<title>Meu Site</title>
+		<title>Meu Portfólio</title>
 	</head>
 	<body>
-		<h1>Hello World!</h1>
+		<h1>...</h1>
+
 	</body>
 		
 
